--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -32,7 +32,7 @@ jobs:
           response=$(curl -s -H "Authorization: Bearer $GITHUB_TOKEN" "https://api.github.com/repos/${{ github.repository }}/releases/latest")
           release_url=$(echo $response | jq -r '.zipball_url')
           release_notes=$(echo $response | jq -r '.body')
-          release_tagname=$(echo $response | jq -r '.tagname')
+          release_tagname=$(echo $response | jq -r '.tag_name')
           echo "LATEST_RELEASE_URL=$release_url" >> $GITHUB_OUTPUT
           echo "RELEASE_NOTES<<EOF" >> $GITHUB_OUTPUT
           echo "$release_notes" >> $GITHUB_OUTPUT
