Update trigger for live

--- a/.github/workflows/download-release.yml
+++ b/.github/workflows/download-release.yml
@@ -3,6 +3,8 @@ name: Marketplace Automation
 on:
   workflow_dispatch:
   push:
+  release:
+    types: [published]
 
 jobs:
   marketplace-automation:
