--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -131,13 +131,15 @@ jobs:
           echo "FILE_UPLOAD_ID=$upload_id" >> $GITHUB_OUTPUT
           
       - name: Prepare JSON Payload
+        id: prepare_payload
         env:
-          VERSION = ${{ steps.fetch_release.outputs.TAG_NAME }}
-          FILE_UPLOAD_ID = ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
+          VERSION: ${{ steps.fetch_release.outputs.TAG_NAME }}
+          FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
         run: |
           # Read the JSON template and replace placeholders with actual values
           cp .github/workflows/payload-template.json updated-payload.json
-          sed "s/\${VERSION}/${VERSION}/g" updated-payload.json | sed "s/\${FILE_UPLOAD_ID}/${FILE_UPLOAD_ID}/g" > .updated-payload.json
+          sed -i "s/\${VERSION}/${VERSION}/g" updated-payload.json
+          sed -i "s/\${FILE_UPLOAD_ID}/${FILE_UPLOAD_ID}/g" updated-payload.json
           cat updated-payload.json
           
       - name: Submit the package
