--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -133,12 +133,13 @@ jobs:
       - name: Prepare JSON Payload
         id: prepare_payload
         env:
-          VERSION: ${{ steps.fetch_release.outputs.TAG_NAME }}
+          #NEW_VERSION: ${{ steps.fetch_release.outputs.TAG_NAME }}
+          NEW_VERSION: "10.1.5"
           FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
         run: |
           # Read the JSON template and replace placeholders with actual values
           cp .github/workflows/payload-template.json updated-payload.json
-          sed -i "s/\${VERSION}/${VERSION}/g" updated-payload.json
+          sed -i "s/\${VERSION}/${NEW_VERSION}/g" updated-payload.json
           sed -i "s/\${FILE_UPLOAD_ID}/${FILE_UPLOAD_ID}/g" updated-payload.json
           cat updated-payload.json
           
@@ -147,14 +148,30 @@ jobs:
           SESSION_TOKEN: ${{ steps.get_session_token.outputs.SESSION_TOKEN }}
           BASE_URL: ${{ secrets.ADOBE_EQP_API_URL }}
         run: |
-          echo $SESSION_TOKEN
-          echo "${BASE_URL}/rest/v1/products/packages"
-          submission_response=$(curl -X POST \
-            -H "Authorization: Bearer $SESSION_TOKEN" \
-            -H "Content-Type: application/json" \
-            --data-binary @updated-payload.json \
-            "${BASE_URL}/rest/v1/products/packages")
-
-          echo "Submission Response:"
-          echo "$submission_response"
-          
+          attempt=0
+          max_attempts=3
+          sleep_duration=5
+          while [ $attempt -lt $max_attempts ]; do
+            submission_response=$(curl -X POST \
+              -H "Authorization: Bearer $SESSION_TOKEN" \
+              -H "Content-Type: application/json" \
+              --data @updated-payload.json \
+              "${BASE_URL}/rest/v1/products/packages")
+      
+            echo "Submission Response: $submission_response"
+            response_code=$(echo "$submission_response" | jq -r '.code')
+      
+            if [ "$response_code" -eq 200 ]; then
+              echo "Submission successful"
+              break
+            else
+              echo "Submission failed with response code $response_code. Retrying in $sleep_duration seconds..."
+              attempt=$((attempt + 1))
+              if [ $attempt -lt $max_attempts ]; then
+                sleep $sleep_duration
+              else
+                echo "Failed to submit after $max_attempts attempts"
+                exit 1
+              fi
+            fi
+          done
