--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -141,15 +141,15 @@ jobs:
           # Read the JSON template and replace placeholders with actual values
           cp .github/workflows/payload-template.json updated-payload.json
           
-          # Replace single quotes with escaped single quotes
-          escaped_notes=$(echo "${THIS_RELEASE_NOTES}" | sed "s/'/\\\\'/g")
+          # # Replace single quotes with escaped single quotes
+          # escaped_notes=$(echo "${THIS_RELEASE_NOTES}" | sed "s/'/\\\\'/g")
           # Print the result
           echo "$escaped_notes"
           
           # Replace placeholders with actual values
           sed -i "s/\${VERSION}/${NEW_VERSION}/g" updated-payload.json
           sed -i "s/\${FILE_UPLOAD_ID}/${FILE_UPLOAD_ID}/g" updated-payload.json
-          sed -i "s/\${RELEASE_NOTES}/$escaped_notes/g" updated-payload.json
+          sed -i '' "s|RELEASE_NOTES|${THIS_RELEASE_NOTES}|g" updated-payload.json
 
           cat updated-payload.json
           
