--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -137,6 +137,7 @@ jobs:
           NEW_VERSION: "10.1.5"
           FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
           THIS_RELEASE_NOTES: ${{ steps.fetch_release.outputs.RELEASE_NOTES }}
+          USERGUIDE_FILE_ID: "657c7af4003a79.72655930.0"
         run: |
           # Read the JSON template and replace placeholders with actual values
           cp .github/workflows/payload-template.json updated-payload.json
@@ -147,8 +148,9 @@ jobs:
           echo "$escaped_notes"
           
           # Replace placeholders with actual values
-          sed -i "s/\${VERSION}/${NEW_VERSION}/g" updated-payload.json
-          sed -i "s/\${FILE_UPLOAD_ID}/${FILE_UPLOAD_ID}/g" updated-payload.json
+          sed -i "s/VERSION/${NEW_VERSION}/g" updated-payload.json
+          sed -i "s/FILE_UPLOAD_ID/${FILE_UPLOAD_ID}/g" updated-payload.json
+          sed -i "s/USERGUIDE_FILE_ID/${USERGUIDE_FILE_ID}/g" updated-payload.json
           sed -i '' "s|RELEASE_NOTES|${THIS_RELEASE_NOTES}|" updated-payload.json
 
           cat updated-payload.json
