--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -134,7 +134,7 @@ jobs:
         id: prepare_payload
         env:
           #NEW_VERSION: ${{ steps.fetch_release.outputs.TAG_NAME }}
-          NEW_VERSION: "11.0.1"
+          NEW_VERSION: "11.0.2"
           FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
           THIS_RELEASE_NOTES: ${{ steps.fetch_release.outputs.RELEASE_NOTES }}
           USERGUIDE_FILE_ID: "657c7af4003a79.72655930.0"
@@ -182,8 +182,7 @@ jobs:
             echo "Response body: $response_body"  # For debugging
           
             if [ -n "$code" ]; then
-              echo "Response code: $code"
-              echo "Submission failed"
+              echo "$response_body"
               break
             else
               echo "SUCCESS"
