--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -177,14 +177,16 @@ jobs:
               echo "Response body: $response_body"  # For debugging
               
               # Extract the "code" field from the JSON response
-              code=$(echo "$response_body" | jq -r '.code // empty')
+              code=$(echo "$response_body" | jq -r '.[0].code // empty')
             
               if [ -n "$code" ]; then
-                echo "$response_body"
+                echo "$code"
+                echo "Attempt = $attempt"
                 break
               fi    
             else
               echo "SUCCESS"
+              exit 1
             fi
           
             attempt=$((attempt + 1))
