--- a/.github/workflows/marketplace-release.yml
+++ b/.github/workflows/marketplace-release.yml
@@ -134,7 +134,7 @@ jobs:
         id: prepare_payload
         env:
           #NEW_VERSION: ${{ steps.fetch_release.outputs.TAG_NAME }}
-          NEW_VERSION: "11.0.6"
+          NEW_VERSION: "11.0.7"
           FILE_UPLOAD_ID: ${{ steps.upload_and_fetch.outputs.FILE_UPLOAD_ID }}
           THIS_RELEASE_NOTES: ${{ steps.fetch_release.outputs.RELEASE_NOTES }}
           #USERGUIDE_FILE_ID: "657c7af4003a79.72655930.0"
@@ -152,8 +152,11 @@ jobs:
           sed -i "s/VERSION/${NEW_VERSION}/g" updated-payload.json
           sed -i "s/FILE_UPLOAD_ID/${FILE_UPLOAD_ID}/g" updated-payload.json
           sed -i "s/USERGUIDE_FILE_ID/${USERGUIDE_FILE_ID}/g" updated-payload.json
-          sed -i "s|RELEASE_NOTES|$THIS_RELEASE_NOTES|" updated-payload.json
+          # sed -i "s|RELEASE_NOTES|$THIS_RELEASE_NOTES|" updated-payload.json
 
+          # Update the JSON payload with the release notes
+          jq --arg notes "$THIS_RELEASE_NOTES" '.RELEASE_NOTES = $notes' updated-payload.json > updated-payload.tmp && mv updated-payload.tmp updated-payload.json
+          
           cat updated-payload.json
           
       - name: Submit the package
